--- a/xLights/wxsmith/FacesPanel.wxs
+++ b/xLights/wxsmith/FacesPanel.wxs
@@ -106,6 +106,7 @@
 								<item>(off)</item>
 							</content>
 							<selection>2</selection>
+							<tooltip>When Auto, blink occurs during rest or (off).</tooltip>
 							<handler function="OnChoice_Faces_EyesSelect" entry="EVT_CHOICE" />
 						</object>
 						<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
@@ -114,30 +115,70 @@
 					</object>
 					<object class="sizeritem">
 						<object class="wxStaticText" name="ID_STATICTEXT_EYEBLINKFREQUENCY" variable="StaticText_Faces_EyeBlinkFrequency" member="yes">
-							<label>Eye Blink Frequency</label>
+							<label>Eye Blink</label>
 						</object>
 						<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
 						<border>5</border>
 						<option>1</option>
 					</object>
 					<object class="sizeritem">
-						<object class="wxChoice" name="ID_CHOICE_Faces_EyeBlinkFrequency" subclass="BulkEditChoice" variable="Choice_Faces_EyeBlinkFrequency" member="yes">
-							<content>
-								<item>Slowest</item>
-								<item>Slow</item>
-								<item>Normal</item>
-								<item>Fast</item>
-								<item>Fastest</item>
-							</content>
-							<selection>2</selection>
-							<handler function="OnChoice_Faces_EyeBlinkFrequencySelect" entry="EVT_CHOICE" />
+						<object class="wxFlexGridSizer" variable="FlexGridSizer2" member="no">
+							<cols>4</cols>
+							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT3" variable="StaticText4" member="yes">
+									<label>Frequency</label>
+								</object>
+								<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxChoice" name="ID_CHOICE_Faces_EyeBlinkFrequency" subclass="BulkEditChoice" variable="Choice_Faces_EyeBlinkFrequency" member="yes">
+									<content>
+										<item>Slowest</item>
+										<item>Slow</item>
+										<item>Normal</item>
+										<item>Fast</item>
+										<item>Fastest</item>
+									</content>
+									<selection>2</selection>
+									<tooltip>How often the blink happens.</tooltip>
+									<handler function="OnChoice_Faces_EyeBlinkFrequencySelect" entry="EVT_CHOICE" />
+								</object>
+								<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT2" variable="StaticText3" member="yes">
+									<label>Duration</label>
+								</object>
+								<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxChoice" name="ID_CHOICE_Faces_EyeBlinkDuration" subclass="BulkEditChoice" variable="Choice_Faces_EyeBlinkDuration" member="yes">
+									<content>
+										<item>Short</item>
+										<item>Normal</item>
+										<item>Long</item>
+										<item>Longer</item>
+									</content>
+									<selection>1</selection>
+									<handler function="OnChoice_Faces_EyeBlinkFrequencySelect" entry="EVT_CHOICE" />
+								</object>
+								<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
 						</object>
-						<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+						<flag>wxALL|wxEXPAND</flag>
 						<border>5</border>
 						<option>1</option>
 					</object>
 					<object class="spacer">
-						<flag>wxALL|wxALIGN_CENTER_VERTICAL</flag>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 						<border>5</border>
 						<option>1</option>
 					</object>
@@ -167,7 +208,7 @@
 						<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText2" member="yes">
 							<label>Use State as outline</label>
 						</object>
-						<flag>wxALL|wxEXPAND</flag>
+						<flag>wxALL|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
 						<border>5</border>
 						<option>1</option>
 					</object>
