wxFiles commit for faces dialog button changes

--- a/xLights/wxsmith/ModelFaceDialog.wxs
+++ b/xLights/wxsmith/ModelFaceDialog.wxs
@@ -41,7 +41,7 @@
 										<option>1</option>
 									</object>
 									<object class="sizeritem">
-										<object class="wxButton" name="ID_BUTTON3" variable="AddButton" member="no">
+										<object class="wxButton" name="ID_BUTTON_ADD" variable="AddButton" member="no">
 											<label>Add</label>
 											<handler function="OnButtonMatrixAddClicked" entry="EVT_BUTTON" />
 										</object>
@@ -50,23 +50,14 @@
 										<option>1</option>
 									</object>
 									<object class="sizeritem">
-										<object class="wxButton" name="ID_BUTTON_IMPORT" variable="ButtonImport" member="yes">
+										<object class="wxButton" name="ID_BUTTON_MORE" variable="ButtonMore" member="yes">
 											<label>...</label>
 											<size>20,-1</size>
 											<minsize>20,-1</minsize>
-											<handler function="OnButtonImportClick" entry="EVT_BUTTON" />
+											<handler function="OnButtonMoreClick" entry="EVT_BUTTON" />
 										</object>
 										<flag>wxTOP|wxBOTTOM|wxRIGHT|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 										<border>5</border>
-									</object>
-									<object class="sizeritem">
-										<object class="wxButton" name="ID_BUTTON4" variable="DeleteButton" member="yes">
-											<label>Delete</label>
-											<handler function="OnButtonMatrixDeleteClick" entry="EVT_BUTTON" />
-										</object>
-										<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
-										<border>5</border>
-										<option>1</option>
 									</object>
 								</object>
 								<flag>wxALL|wxEXPAND</flag>
