--- a/xLights/wxsmith/xLightsframe.wxs
+++ b/xLights/wxsmith/xLightsframe.wxs
@@ -1317,6 +1317,11 @@
 					<label>Remap Custom Model</label>
 					<handler function="OnMenuItem_RemapCustomSelected" entry="EVT_MENU" />
 				</object>
+				<object class="wxMenuItem" name="ID_MENUITEM_GenerateAIImage" variable="Menu_GenerateAIImage" member="yes">
+					<label>Generate AI Image</label>
+					<help>Create images using Gemini - if configured.</help>
+					<handler function="OnMenuItem_GenerateAIImageSelected" entry="EVT_MENU" />
+				</object>
 				<object class="wxMenuItem" name="ID_MNU_GENERATELYRICS" variable="MenuItem_GenerateLyrics" member="yes">
 					<label>Generate &amp;Lyrics From Data</label>
 					<help>Generate lyric phenomes from data</help>
