--- a/xLights/wxsmith/AIImageDialog.wxs
+++ b/xLights/wxsmith/AIImageDialog.wxs
@@ -10,6 +10,7 @@
 		<object class="wxFlexGridSizer" variable="MainSizer" member="yes">
 			<cols>1</cols>
 			<growablecols>0</growablecols>
+			<growablerows>1</growablerows>
 			<object class="sizeritem">
 				<object class="wxStaticBoxSizer" variable="ParametersBox" member="yes">
 					<label>Parameters</label>
@@ -17,6 +18,7 @@
 						<object class="wxFlexGridSizer" variable="ParametersSizer" member="yes">
 							<cols>2</cols>
 							<growablecols>1</growablecols>
+							<growablerows>0</growablerows>
 							<object class="sizeritem">
 								<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
 									<label>Prompt</label>
@@ -50,6 +52,8 @@
 					<object class="sizeritem">
 						<object class="wxFlexGridSizer" variable="ResultBoxSizer" member="yes">
 							<cols>3</cols>
+							<growablecols>1</growablecols>
+							<growablerows>0</growablerows>
 							<object class="sizeritem">
 								<object class="wxStaticBitmap" name="ID_STATICBITMAP1" variable="ResultBitmap" member="yes">
 									<size>400,400</size>
@@ -60,11 +64,10 @@
 								<option>1</option>
 							</object>
 							<object class="sizeritem">
-								<object class="wxStaticText" name="ID_STATICTEXT2" variable="ErrorText" member="yes">
-									<label></label>
+								<object class="wxTextCtrl" name="ID_STATICTEXT2" variable="ErrorText" member="yes">
 									<size>400,400</size>
 									<minsize>400,400</minsize>
-									<maxsize>400,400</maxsize>
+									<style>wxTE_MULTILINE|wxTE_READONLY|wxTE_WORDWRAP|wxVSCROLL</style>
 								</object>
 								<flag>wxALL|wxEXPAND</flag>
 								<border>5</border>
