--- a/xLights/wxsmith/AIColorPaletteDialog.wxs
+++ b/xLights/wxsmith/AIColorPaletteDialog.wxs
@@ -12,6 +12,20 @@
 						<object class="wxFlexGridSizer" variable="FlexGridSizer2" member="no">
 							<cols>2</cols>
 							<object class="sizeritem">
+								<object class="wxStaticText" name="ID_STATICTEXT1" variable="StaticText1" member="yes">
+									<label>AI Service</label>
+								</object>
+								<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxChoice" name="ID_CHOICE1" variable="AIServiceChoice" member="yes" />
+								<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
 								<object class="wxRadioButton" name="ID_RADIOBUTTON1" variable="SongRadioButton" member="yes">
 									<label>Song</label>
 									<selected>1</selected>
