--- a/xLights/wxsmith/PicturesPanel.wxs
+++ b/xLights/wxsmith/PicturesPanel.wxs
@@ -10,12 +10,46 @@
 					<cols>2</cols>
 					<growablecols>0</growablecols>
 					<object class="sizeritem">
-						<object class="wxFilePickerCtrl" name="ID_FILEPICKER_Pictures_Filename" subclass="xlPictureFilePickerCtrl" variable="FilePickerCtrl1" member="yes">
-							<message></message>
-							<wildcard></wildcard>
-							<handler function="OnFilePickerCtrl1FileChanged" entry="EVT_FILEPICKER_CHANGED" />
+						<object class="wxStaticBitmap" name="ID_STATICBITMAP1" variable="BitmapPreview" member="yes">
+							<minsize>0,50d</minsize>
 						</object>
 						<flag>wxALL|wxEXPAND</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxFlexGridSizer" variable="FlexGridSizer6" member="no">
+							<cols>1</cols>
+							<object class="sizeritem">
+								<object class="wxButton" name="ID_BUTTON1" variable="SelectButton" member="yes">
+									<label>Select...</label>
+									<handler function="OnSelectButtonClick" entry="EVT_BUTTON" />
+								</object>
+								<flag>wxALL|wxEXPAND</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxButton" name="ID_BUTTON2" variable="AIGenerateButton" member="yes">
+									<label>AI Generate...</label>
+									<handler function="OnAIGenerateButtonClick" entry="EVT_BUTTON" />
+								</object>
+								<flag>wxALL|wxEXPAND</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+							<object class="sizeritem">
+								<object class="wxTextCtrl" name="ID_TEXTCTRL_Pictures_Filename" variable="FileNameCtrl" member="yes">
+									<value></value>
+									<hidden>1</hidden>
+								</object>
+								<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+								<border>5</border>
+								<option>1</option>
+							</object>
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
 						<option>1</option>
 					</object>
 				</object>
